<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPN Calculator</string>

    <string name="display_default">0</string>
    <string name="display_default_stack">[]</string>
    <string name="display_error">error</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_coma">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_division">÷</string>
    <string name="button_reverse">⇄</string>
    <string name="button_sign_change">±</string>
    <string name="button_enter">B↑</string>
    <string name="button_clear">C</string>

</resources>
